# lume-algo-sesh

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  import_test_data.sh  test_preferences.csv  test_preferences.json  test_profiles.csv  test_profiles.json
benches/: bench.rs
config/: default.toml
docs/: FLUTTER_MIGRATION_GUIDE.md
k8s/: deployment.yaml  hpa.yaml  service.yaml
migrations/: 001_initial_seen_profiles.sql
src/: config.rs  lib.rs  main.rs
src/core/: distance.rs  filters.rs  matcher.rs  mod.rs  scoring.rs
src/models/: domain.rs  mod.rs  requests.rs  responses.rs
src/routes/: matches.rs  mod.rs
src/services/: appwrite.rs  cache.rs  mod.rs  postgres.rs
tests/: create_test_profiles.rs  generate_test_data.rs  integration_tests.rs  unit_tests.rs
