[package]
name = "lume-algo"
version = "0.1.0"
edition = "2021"
description = "High-performance matching service for Lume dating app"
authors = ["Lume Team"]

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
deadpool-postgres = "0.14"

# Redis caching
redis = { version = "0.26", features = ["tokio-comp", "connection-manager", "aio"] }
lru = "0.12"
moka = { version = "0.12", features = ["future"] }

# HTTP client for Appwrite
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2.1"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
toml = "0.8"

# Geospatial
geo = "0.28"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenv = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# JWT validation
jsonwebtoken = "9.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockito = "1.4"
tokio-test = "0.4"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "lume-algo"
path = "src/main.rs"

# Uncomment to build test data generator (not included in Docker builds)
# [[bin]]
# name = "generate-test-data"
# path = "tests/generate_test_data.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
